--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
+    "start:no-deamon": "pm2 start ecosystem.config.json --no-daemon",
+    "start:no-exit": "pm2 start ecosystem.config.json",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
