--- a/ecosystem.config.json
+++ b/ecosystem.config.json
@@ -2,7 +2,7 @@
    "apps": [
      {
        "name": "ban_me_please",
-       "script": "src/main.js",
+       "script": "dist/src/main.js",
        "instances": 1,
        "autorestart": true,
        "exp_backoff_restart_delay": 500,
