fix infinity mute

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:no-daemon": "nest build && pm2 start ecosystem.config.json --no-daemon",
-    "start:no-exit": "nest build && pm2 start ecosystem.config.json",
+    "prod:no-daemon": "nest build && pm2 start ecosystem.config.json --no-daemon",
+    "prod:no-exit": "nest build && pm2 start ecosystem.config.json",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
